==> eugenioorosco8/Poncho_IoT_EDU_CIAA_NXP/Software NODO - Arduino/nrf24l01/NRF24L01.cpp <==
#include"NRF24L01.h"
#include "Arduino.h"
#include <SPI.h>

void NRF24L01::SPI_Start (void)
{
  SPI.begin();
  SPI.setDataMode(SPI_MODE0);
  SPI.setClockDivider(SPI_2XCLOCK_MASK);
}

void NRF24L01::nRF24L01_Ports_Start(void)
{
  pinMode(Ce_Pin,OUTPUT);
  pinMode(Csn_Pin,OUTPUT);


  CSN_HIGH();// At program start CSN must be set High (Inactive) => Signal usedfor Starting a new SPI Communication
  CE_LOW();  // At program start CE must be set Low (Inactive) => Signal used forturning Standby into RX or TX Mode
}

unsigned char NRF24L01::SPI_Transfer(unsigned char byte_to_send)
{

  return (SPI.transfer(byte_to_send) );

}

void NRF24L01::Write_nRF24L01_Status (unsigned char Register_Content)
{
  unsigned char dummydata, nRF24L01_Status;

  CSN_LOW(); // ACTIVATE CSN

  nRF24L01_Status=SPI_Transfer(W_REGISTER+STATUS_RF);
  // Send Instruction Word (Write STATUS Register) whileReceiving nRF24L01_Status
  dummydata=SPI_Transfer(Register_Content);
  // Send Data Byte while receiving dummydata (discardedby the PIC18)
  CSN_HIGH(); // DEACTIVATE CSN
}

void NRF24L01::Reset_nRF24L01_Status_and_nRF24L01_Payloads (void)
{

  unsigned char nRF24L01_Status;
  CSN_LOW(); // ACTIVATE CSN

  nRF24L01_Status=SPI_Transfer(FLUSH_TX); // Send Instruction to Flush TX while receiving nRF24L01 Status
  CSN_HIGH(); // DEACTIVATE CSN

  delay(5); // Minimum CSN=0 delay

  CSN_LOW(); // ACTIVATE CSN
  nRF24L01_Status=SPI_Transfer(FLUSH_RX); // Send Instruction to Flush RX while receiving nRF24L01 Status

  CSN_HIGH(); // DEACTIVATE CSN

  Write_nRF24L01_Status(RX_DR); // Limpia RX_DR flag if it is High
  Write_nRF24L01_Status(TX_DS); // Limpia TX_DS flag if it is High
  Write_nRF24L01_Status(MAX_RT); // Limpia MAX_RT flag if it is High
}

void NRF24L01::Start_RX_Mode_nRF24L01 (     unsigned char TX_RX_Address_Width,
unsigned char Frequency_Channel,  unsigned char RF_Data_Rate,
unsigned char RF_Output_Power,    unsigned char LNA_Gain,
unsigned char CRC_Setup,      unsigned char *RX_Pipe0_Address,
unsigned char *RX_Pipe1_Address,  unsigned char RX_Pipe2_Address,
unsigned char RX_Pipe3_Address,   unsigned char RX_Pipe4_Address,
unsigned char RX_Pipe5_Address,   unsigned char Enable_Checksum,
unsigned char RX_P0_Payload_Width,  unsigned char RX_P1_Payload_Width,
unsigned char RX_P2_Payload_Width,  unsigned char RX_P3_Payload_Width,
unsigned char RX_P4_Payload_Width,  unsigned char RX_P5_Payload_Width )
{
  CE_LOW(); // We rest in Standby I Mode (Low Consumption) until

  Reset_nRF24L01_Status_and_nRF24L01_Payloads();
  // Reset the nRF24L01 Status Register and Flush TX and RX Payload Memories
  Write_nRF24L01_Register (EN_AA, 0b00111111);
  // Enable Auto Acknowledgement for all RX Pipes
  Write_nRF24L01_Register (EN_RXADDR, 0b00111111);
  // Enable all RX Pipes
  Write_nRF24L01_Register (SETUP_AW, TX_RX_Address_Width);
  // Set Width for all Addresses: 0b01 => 3 bytes, 0b10 => 4 bytes, 0b11 => 5 bytes
  Write_nRF24L01_Register (RF_CH, Frequency_Channel);
  // Set the frequency channel nRF24L01 operates on
  Write_nRF24L01_Register (RF_SETUP, RF_Data_Rate*0b1000 + RF_Output_Power*0b10 +
  LNA_Gain); // Set nRF24L01 RF Data Rate, Power and LNA Gain
  Write_nRF24L01_Address_Register (TX_RX_Address_Width, RX_ADDR_P0, RX_Pipe0_Address);
  // Define RX Address for Pipe0 (3, 4 or 5 bytes)
  Write_nRF24L01_Address_Register (TX_RX_Address_Width, RX_ADDR_P1, RX_Pipe1_Address);
  // Define RX Address for Pipe1 (3, 4 or 5 bytes)
  Write_nRF24L01_Register (RX_ADDR_P2, RX_Pipe2_Address);
  // Define RX Address for Pipe2 (1 byte => MSBytes will be equal to RX_ADDR_P1)
  Write_nRF24L01_Register (RX_ADDR_P3, RX_Pipe3_Address);
  // Define RX Address for Pipe3 (1 byte => MSBytes will be equal to RX_ADDR_P1)
  Write_nRF24L01_Register (RX_ADDR_P4, RX_Pipe4_Address);
  // Define RX Address for Pipe4 (1 byte => MSBytes will be equal to RX_ADDR_P1)
  Write_nRF24L01_Register (RX_ADDR_P5, RX_Pipe5_Address);
  // Define RX Address for Pipe5 (1 byte => MSBytes will be equal to RX_ADDR_P1)
  Write_nRF24L01_Register (RX_PW_P0, RX_P0_Payload_Width+Enable_Checksum);
  // Define Payload Width for Pipe0 in RX Mode (extra byte if Checksum is Enabled)
  Write_nRF24L01_Register (RX_PW_P1, RX_P1_Payload_Width+Enable_Checksum);
  // Define Payload Width for Pipe1 in RX Mode (extra byte if Checksum is Enabled)
  Write_nRF24L01_Register (RX_PW_P2, RX_P2_Payload_Width+Enable_Checksum);
  // Define Payload Width for Pipe2 in RX Mode (extra byte if Checksum is Enabled)
  Write_nRF24L01_Register (RX_PW_P3, RX_P3_Payload_Width+Enable_Checksum);
  // Define Payload Width for Pipe3 in RX Mode (extra byte if Checksum is Enabled)
  Write_nRF24L01_Register (RX_PW_P4, RX_P4_Payload_Width+Enable_Checksum);
  // Define Payload Width for Pipe4 in RX Mode (extra byte if Checksum is Enabled)
  Write_nRF24L01_Register (RX_PW_P5, RX_P5_Payload_Width+Enable_Checksum);
  // Define Payload Width for Pipe5 in RX Mode (extra byte if Checksum is Enabled)
  Write_nRF24L01_Register (CONFIG_RF, EN_CRC + CRC_Setup*0b100 + PWR_UP + PRIM_RX);
  // nRF24L01 Configuration: RX Mode, Power Up and 2_byte CRC Encoding
  delay(5); // TIMING CONDITION #1: Delay required between Power Down and Stanby Mode I => 1.5 ms
  }

void NRF24L01::Start_TX_Mode_nRF24L01 (     unsigned char TX_RX_Address_Width,
unsigned char Frequency_Channel,  unsigned char RF_Data_Rate,
unsigned char RF_Output_Power,    unsigned char LNA_Gain,
unsigned char CRC_Setup,      unsigned char Auto_Retransmit_Delay,
unsigned char Max_Auto_Retransmit,  unsigned char Enable_Checksum,
unsigned char TX_RX_Payload_Width )
{

  CE_LOW();
  Reset_nRF24L01_Status_and_nRF24L01_Payloads();
  // Reset the nRF24L01 Status Register and Flush TX and RX Payload Memories
  Write_nRF24L01_Register (EN_AA, 0b00111111);
  // Enable Auto Acknowledgement for all RX Pipes
  Write_nRF24L01_Register (EN_RXADDR, 0b00111111);
  // Enable all RX Pipes
  Write_nRF24L01_Register (SETUP_AW, TX_RX_Address_Width);
  // Set Width for all Addresses: 0b01 => 3 bytes, 0b10 => 4 bytes, 0b11 => 5 bytes
  Write_nRF24L01_Register (SETUP_RETR, Auto_Retransmit_Delay*0b10000 +Max_Auto_Retransmit); // Automatic Retransmission Setup: Delay between and Maximum number
  Write_nRF24L01_Register (RF_CH, Frequency_Channel);
  // Set the frequency channel nRF24L01 operates on
  Write_nRF24L01_Register (RF_SETUP, RF_Data_Rate*0b1000 + RF_Output_Power*0b10 + LNA_Gain);
  // Set nRF24L01 RF Data Rate, Power and LNA Gain
  Write_nRF24L01_Register (RX_PW_P0, TX_RX_Payload_Width+Enable_Checksum);
  // Define Payload Width for Pipe0 (extra byte if Checksum is Enabled)
  Write_nRF24L01_Register (CONFIG_RF,EN_CRC + CRC_Setup*0b100 + PWR_UP + 0*PRIM_RX);
  // nRF24L01 Configuration: TX Mode, Power Up and 2_byte CRC Encoding
  delay(5); // TIMING CONDITION #1: Delay required between Power Down and Stanby Modes => 1.5 ms

}

unsigned char NRF24L01::Receive_Data_RX_Mode_nRF24L01( unsigned char Enable_Checksum,unsigned char Max_Waiting_ds, unsigned char TX_RX_Payload_Width,unsigned char *RX_Payload ){
  unsigned char nRF24L01_Status;
  unsigned char Origin_Pipe;

  CE_LOW(); // Deactivate CE to leave RX Mode (Low Current Consumtion)
  delay(10); 

  nRF24L01_Status=Read_nRF24L01_Status();
  // Update the nRF24L01 Status to get the Origin_Pipe
  Origin_Pipe=(nRF24L01_Status & RX_P_NO);
  // Data Pipe Number is obtained from the STATUS Register
  Read_nRF24L01_RX_Payload(Enable_Checksum,TX_RX_Payload_Width,RX_Payload); // After Reading the RX FIFO, all data is deleted from FIFO.
  Write_nRF24L01_Status(RX_DR);
}
